@@ -1,5 +1,7 @@
 package com.iglaz.astonbase.lesson4.generics;
 
+import com.iglaz.astonbase.lesson2.object.Client;
+
 import java.util.Arrays;
 import java.util.Deque;
 import java.util.LinkedList;
@@ -14,19 +16,32 @@ public class ListDemo {
 //        Deque<String> names = new LinkedList<>();
 //
 //        GenList<String> stringGenList = new GenList<String>(12);
-
-        List<Integer> integers = List.of(234, 234, 234);
-
-        List<Integer> list = Arrays.asList(2342, 23423, 234);
-
-        Set.of();
-
-        Map.of(23, "sdfa", 2424, "sdfa");
-
-        Map.ofEntries(entry(232, "asdfa"), entry(2342, "sdfa"));
-
-        integers.add(234);
+//
+//        List<Integer> integers = List.of(234, 234, 234);
+//
+//        List<Integer> list = Arrays.asList(2342, 23423, 234);
+//
+//        Set.of();
+//
+//        Map.of(23, "sdfa", 2424, "sdfa");
+//
+//        Map.ofEntries(entry(232, "asdfa"), entry(2342, "sdfa"));
+//
+//        integers.add(234);
 
 //        GenList.sort(List.of(234, 234, 234));
+
+//        AnyList list = new AnyList(10);
+//
+//
+//        list.add("String");
+//        list.add("String");
+//        list.add("String");
+//        list.add(24);
+//        list.add(new Client("adf", 22));
+//
+//        Integer o = (Integer) list.get(1);
+//        o.byteValue();
+
     }
 }
